--- a/css/style.css
+++ b/css/style.css
@@ -1455,6 +1455,17 @@ html.has-scroll-dragging {
   transition: color 0.2s linear, opacity 0.1s linear 0.3s;
 }
 
+.header__name svg {
+  width: 228px;
+  height: 46px;
+  object-fit: contain;
+  color: var(--text);
+}
+
+.header__name svg path:nth-child(2) {
+  color: var(--purple);
+}
+
 .header.header__transparent .header__name {
   color: var(--white);
   -webkit-transition: color 0.2s linear 1.4s, opacity 0.1s linear 0.3s;
