--- a/css/style.css
+++ b/css/style.css
@@ -334,7 +334,7 @@ section {
   top: 0%;
   right: 0%;
   bottom: 0%;
-  z-index: 300;
+  z-index: 1051;
   mix-blend-mode: difference;
   -webkit-transform: translate3d(-100px, -100px, 0);
   transform: translate3d(-100px, -100px, 0);
@@ -8610,6 +8610,11 @@ html.has-scroll-dragging {
   height: 0px !important;
   padding: 0 !important;
   margin: 0 !important;
+}
+
+.popup-window-content,
+.popup-window {
+  background-color: var(--bg) !important;
 }
 
 /* end bitrix fun */
