--- a/css/style.css
+++ b/css/style.css
@@ -8665,6 +8665,22 @@ html.has-scroll-dragging {
   border: 1px solid var(--border);
 }
 
+.generation__item {
+  opacity: 0;
+  -webkit-transform: translateY(30px);
+  transform: translateY(30px);
+  -webkit-transition: opacity 0.3s linear, -webkit-transform 0.2s linear;
+  transition: opacity 0.3s linear, transform 0.2s linear;
+}
+
+.loaded .generation__item.animate {
+  opacity: 1;
+  -webkit-transform: translateY(0%);
+  transform: translateY(0%);
+  -webkit-transition-delay: calc(var(--inc-step)*0.1s);
+  transition-delay: calc(var(--inc-step)*0.1s);
+}
+
 .generation__top {
   display: -webkit-box;
   display: -ms-flexbox;
