--- a/css/style.css
+++ b/css/style.css
@@ -4121,7 +4121,8 @@ html.has-scroll-dragging {
 .competencies__desc,
 .competencies__description,
 .articles_page__desc,
-.generation__desc {
+.generation__desc,
+.project_top__info_desc {
   max-width: 430px;
   padding: 0 0 0 40px;
   position: relative;
@@ -4148,7 +4149,8 @@ html.has-scroll-dragging {
 .competencies__desc::before,
 .competencies__description::before,
 .articles_page__desc::before,
-.generation__desc::before {
+.generation__desc::before,
+.project_top__info_desc::before {
   content: "";
   display: inline-block;
   width: 2px;
@@ -4910,23 +4912,43 @@ html.has-scroll-dragging {
 }
 
 .project_top__desc,
-.project_top__head {
+.project_top__head,
+.project_top__info_desc,
+.project_top__info_tag {
   color: var(--black);
 }
 
+.project_top__info_desc::before {
+  background-color: var(--black);
+}
+
 .project_top__white .project_top__desc,
-.project_top__white .project_top__head {
+.project_top__white .project_top__head,
+.project_top__white .project_top__info_desc,
+.project_top__white .project_top__info_tag {
   color: var(--white);
 }
 
+.project_top__white .project_top__info_desc::before {
+  background-color: var(--white);
+}
+
 .project_top__bg .project_top__desc,
-.project_top__bg .project_top__head {
+.project_top__bg .project_top__head,
+.project_top__bg .project_top__info_desc,
+.project_top__bg .project_top__info_tag {
   color: var(--text);
+}
+
+.project_top__bg .project_top__info_desc::before {
+  background-color: var(--text);
 }
 
 .project_top__head,
 .project_top__desc,
-.project_top__button {
+.project_top__button,
+.project_top__info_desc,
+.project_top__info_tag {
   opacity: 0;
   -webkit-transform: translateY(30px);
   transform: translateY(30px);
@@ -4936,7 +4958,9 @@ html.has-scroll-dragging {
 
 .loaded .project_top__block.animate .project_top__head,
 .loaded .project_top__block.animate .project_top__desc,
-.loaded .project_top__block.animate .project_top__button {
+.loaded .project_top__block.animate .project_top__button,
+.loaded .project_top__block.animate .project_top__info_desc,
+.loaded .project_top__block.animate .project_top__info_tag {
   opacity: 1;
   -webkit-transform: translateY(0px);
   transform: translateY(0px);
@@ -4944,12 +4968,14 @@ html.has-scroll-dragging {
   transition-delay: 0.1s;
 }
 
-.loaded .project_top__block.animate .project_top__desc {
+.loaded .project_top__block.animate .project_top__desc,
+.loaded .project_top__block.animate .project_top__info_desc {
   -webkit-transition-delay: 0.3s;
   transition-delay: 0.3s;
 }
 
-.loaded .project_top__block.animate .project_top__button {
+.loaded .project_top__block.animate .project_top__button,
+.loaded .project_top__block.animate .project_top__info_tag {
   -webkit-transition-delay: 0.5s;
   transition-delay: 0.5s;
 }
@@ -4968,6 +4994,23 @@ html.has-scroll-dragging {
   transform: scale(1);
   -webkit-transition-delay: 0.7s;
   transition-delay: 0.7s;
+}
+
+.project_top__info_flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 50px 0 0;
+  flex-direction: column;
+  gap: 60px;
+}
+
+.project_top__info_tags {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 
 .project__info {
@@ -9527,7 +9570,8 @@ html.has-scroll-dragging {
   .competencies__desc,
   .competencies__description,
   .articles_page__desc,
-  .generation__desc {
+  .generation__desc,
+  .project_top__info_desc {
     padding: 0 0 0 30px;
   }
   .articles__block,
@@ -9637,6 +9681,10 @@ html.has-scroll-dragging {
   }
   .project_top__image {
     height: calc(var(--height) - 220px);
+  }
+  .project_top__info_flex {
+    padding: 30px 0 0;
+    gap: 40px;
   }
   .articles__image {
     height: 160px;
@@ -10455,7 +10503,8 @@ html.has-scroll-dragging {
   .competencies__desc,
   .competencies__description,
   .articles_page__desc,
-  .generation__desc {
+  .generation__desc,
+  .project_top__info_desc {
     padding: 0 0 0 20px;
   }
   .expertise__button {
@@ -10812,7 +10861,7 @@ html.has-scroll-dragging {
     opacity: 1;
   }
   .spec__border {
-    width: calc(100% - 18px);
+    width: calc(100% - 20px);
     height: calc(100% - 79px);
     top: 10px;
     left: 10px;
@@ -11036,7 +11085,8 @@ html.has-scroll-dragging {
   .competencies__desc,
   .competencies__description,
   .articles_page__desc,
-  .generation__desc {
+  .generation__desc,
+  .project_top__info_desc {
     max-width: 100%;
   }
   .header__consultation_blocks {
